Add full recipes

--- a/recipes/chickennoodle.html
+++ b/recipes/chickennoodle.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Chicken Noodle</title>
+    </head>
     <body>
         <h1>Chicken Noodle</h1>
         <img src="chickennoodle.jpg" alt="Chicken Noodle" width="300" height="250">
