--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     </head>
 
     <body>
+        
         <h1>Odin Recipes</h1>
-        <a href="recipes/chickennoodle.html">Chicken Noodle</a>
+        <ul>
+            <li>
+                <a href="recipes/chickennoodle.html">Chicken Noodle</a>
+            </li>
+            <li>
+                <a href="recipes/banhtrangtron.html">Banh Trang Tron</a>
+            </li>
+            <li>
+                <a href="recipes/bundaumamtom.html">Bun Dau Mam Tom</a>
+            </li>
+        </ul>
+
     </body>
 </html>
